<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_selection">Accounts - Swipe left or right</string>
    <string name="action_connect">Connect</string>
    <string name="action_logs">Logs</string>
    <string name="action_menu">Disconnect</string>
    <string name="action_settings">Settings</string>
    <string name="action_tab">Tab Complete</string>
    <string name="add_account_description">Add an Account</string>
    <string name="already_connected_alert_desc">You are already connected! Do you want to disconnect and join {IP}?</string>
    <string name="already_connected_alert_title">Already connected!</string>
    <string name="app_name">materialintro</string>
    <string name="app_name_ChatCraft">ChatCraft</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="ask_activate_log">There\'s no logs here! Do you want to activate log saving?</string>
    <string name="ask_for_disconnect">Are you sure you want to disconnect?</string>
    <string name="auto_login_description">Auto login after connection</string>
    <string name="auto_teleport_name">Auto-Teleport after login</string>
    <string name="banner_ad_unit_id">ca-app-pub-4499087698213644/1299694614</string>
    <string name="banner_chat_ad_unit_id">ca-app-pub-4499087698213644/4444964215</string>
    <string name="banner_info_ad_unit_id">ca-app-pub-4499087698213644/8580785819</string>
    <string name="benvenuto">Hi! Login to chat!</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="buy_insert_name_content">Insert your minecraft name</string>
    <string name="buy_insert_name_title">Insert your name</string>
    <string name="cant_remove_this_server">Disable this server from settings</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="com.crashlytics.android.build_id">44e206fd-e90e-4f52-8593-63b81f0b076b</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="connection_failed">Connection failed!</string>
    <string name="cracked_password_edit_desc">Edit auth password</string>
    <string name="cracked_password_edit_title">Auth password</string>
    <string name="disable_save_skin_alert_desc">Do you want to delete all saved skins?</string>
    <string name="disable_save_skin_alert_title">Disabling skins save on files</string>
    <string name="disconnected">Disconnected</string>
    <string name="download_skin_description">Downloads skins also without WiFi!</string>
    <string name="drawer_close">Menu closed</string>
    <string name="drawer_open">Menu opened</string>
    <string name="error_email">Your username seems to be incorrect. You must use a USERNAME for non premium accounts!</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_name">Your email seems to be incorrect. YOU MUSTN\'T INSERT YOUR USERNAME. YOU MUST INSERT YOUR EMAIL!!!</string>
    <string name="error_version_alert_desc">The version of {SERVER} seems to be wrong! Do you want that I fix it?</string>
    <string name="error_version_alert_title">Version error</string>
    <string name="exit_alert_desc">Are you sure to exit?</string>
    <string name="expand_button_title">Advanced</string>
    <string name="experimental_movement">Tips: This is an experimental feature. Use it only if necessary! It doesn\'t work 100%!</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fail_connect">Can\'t connect to {IP}:{PORT}! Maybe the server is offline! Check the port and the ip and retry!</string>
    <string name="fast_login_save_password">Do you want to save login password to access server faster?</string>
    <string name="good_shopping">Good shopping!</string>
    <string name="help_not_found">No help available :(</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="high_performance_description">In case of lag disable this!</string>
    <string name="in_app_purchase_stoler">It seems you hacked with some tool in-app purchases. If it is an error please contact me on usavsurss@gmail.com. I will fix this in a few moments.</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-4499087698213644/5353181815</string>
    <string name="ip_server_description">Insert server ip. You can find it by searching server name on Google. DO NOT WRITE THE PORT HERE!</string>
    <string name="ip_server_error">This ip is not valid!</string>
    <string name="ip_server_field">Server ip</string>
    <string name="italian_warning">Usa Vs Urss is an italian server. If you do not understand Italian I suggest you to add an other Server!</string>
    <string name="kicked_reason">You were kicked for this reason:</string>
    <string name="login_to_see">Login to see someone here!</string>
    <string name="logs_ask_for_premium_features">Welcome to log section! Here you will see old chats. You need to buy premium features to use this. Do you want to buy premium features?</string>
    <string name="logs_title">Log</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="name_account_description">The name you will use on minecraft servers! If you are premium use your email!</string>
    <string name="name_account_error">The name can\'t contain spaces or be empty!</string>
    <string name="name_account_field">Nickname or Email</string>
    <string name="name_server_description">The server name that will be displayed in your Login page.</string>
    <string name="name_server_error">There is one server with the same name!</string>
    <string name="name_server_field">Server name</string>
    <string name="next_step">Next step</string>
    <string name="no">No</string>
    <string name="no_logs">There\'s no logs here! Join a server and come back!</string>
    <string name="old_version">An update has been found! Update for new fixes and features!</string>
    <string name="online_players">Online players:</string>
    <string name="page_number">%1$d/%2$d</string>
    <string name="password_account_description">Password for auto-login (Optional)! All non-premium servers uses plugins for authentication and this field will auto authenticate with most of this servers.</string>
    <string name="password_account_error">The password can\'t contain spaces!</string>
    <string name="password_account_field">Servers Login password</string>
    <string name="password_manager_description">Auth password (/login password) are stored per server. Here you can add/edit password:</string>
    <string name="password_premium_checkbox_error">Yes</string>
    <string name="password_premium_checkbox_field">Are you premium?</string>
    <string name="password_premium_description">Password for PREMIUM USERS. Insert the password you use on minecraft.net! If you are not premium press back and deselect checkbox!</string>
    <string name="password_premium_error">Premium login failed! Check you typed you EMAIL and password correctly!</string>
    <string name="password_premium_field">Password Login Minecraft Premium</string>
    <string name="password_premiumt_checkbox_description">If you have a premium Minecraft account (paid on minecraft.net) select this!</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="settings_all_in_one">If you want both, premium features and no ads, you can even save moneys! It costs only 1.50$</string>
    <string name="settings_no_ads">For the small cost of 0.99$ you won\'t see any more ads on your screen!</string>
    <string name="settings_on_connect_commands">Write here commands or messages that you want to run on connection</string>
    <string name="settings_premium_features">It costs 0,99$. It includes: infinite servers and infinite accounts in the login screen, fast message history, access to chat logs and more features that are coming soon!</string>
    <string name="settings_save_logs">This will allow you to see your old chats and to share part of them! Premium-Features purchase is required!</string>
    <string name="tp_safe_place_description">Run in a safe place after login</string>
</resources>